# mlx-speech

./: .gitignore  AGENTS.md  CODEX.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
docs/: README.md  cohere-asr.md  dramabox.md  fish-s2-pro.md  granite-speech-asr.md  huggingface-release.md  longcat-audiodit.md  moss-local.md  moss-sound-effect.md  moss-ttsd.md  qwen3-asr.md  references.md  step-audio-editx.md  vibevoice.md
examples/: README.md  vibevoice_arch_podcast.txt
models/: README.md
plans/: v0-moss-tts-local.done.md  v1-moss-tts.active.md  v1-moss-tts.done.md  v1-voice-clone.draft.md  v2-moss-ttsd.draft.md  v2-vibevoice.done.md  v3-cohere-asr.done.md  v3-cohere-asr.md  v4-step-audio-editx.done.md  v5-dramabox.md
prompts/: context-discovery-template.md  review-handoff.md  task-tracking-rules.md
scripts/: README.md  audit_moss_ttsd_upstream_parity.py  batch_generate_longcat_audiodit.py  benchmark_moss_ttsd.py  compare_moss_local_upstream_parity.py  convert_cohere_asr.py  convert_fish_s2_pro.py  convert_longcat_audiodit.py  convert_moss_audio_tokenizer.py  convert_moss_local.py  convert_moss_sound_effect.py  convert_moss_ttsd.py  convert_step_audio_editx.py  convert_vibevoice.py  download_openmoss_v0_assets.py  generate_dramabox.py  generate_dramabox_podcast.py  generate_fish_s2_pro.py  generate_longcat_audiodit.py  generate_moss_local.py  generate_moss_sound_effect.py  generate_moss_ttsd.py  generate_step_audio_editx.py  generate_vibevoice.py  inspect_moss_local_checkpoint.py  materialize_clone_eval_macos.py  run_local_speech_smoke_eval.py  sweep_clone_presets.py  transcribe_cohere_asr.py  validate_moss_local_alignment.py
site/: README.md  index.html  robots.txt  sitemap.xml
tests/: conftest.py  test_alignment_report.py  test_audio_io.py  test_batch_generate_longcat_audiodit_script.py  test_benchmark_moss_ttsd_script.py  test_checkpoint_layout.py  test_cohere_asr_feature_extraction.py  test_cohere_asr_generation.py  (+56 more)
(+517 files in other folders)
