[project]
name = "mlx-speech"
version = "0.1.0"
description = "MLX-native speech library for Apple Silicon."
license = { file = "LICENSE" }
authors = [{ name = "AppAutomaton" }]
urls = { Repository = "https://github.com/appautomaton/mlx-speech" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.31.1",
    "numpy",
    "safetensors",
    "soundfile>=0.13.1",
    "tokenizers>=0.22.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "local_integration: test requires local model artifacts or repo-specific runtime assets",
]

[tool.ruff]
target-version = "py313"
exclude = [".references", ".venv"]
