[project]
name = "mlx-speech"
version = "0.3.0"
description = "MLX-native speech library for Apple Silicon."
license = { file = "LICENSE" }
authors = [{ name = "AppAutomaton" }]
urls = { Repository = "https://github.com/appautomaton/mlx-speech" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.31.1",
    "numpy",
    "safetensors",
    "soundfile>=0.13.1",
    "tokenizers>=0.22.2",
    "huggingface_hub>=1.8,<2",
]

[project.scripts]
"mlx-speech" = "mlx_speech.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "checkpoint: needs local model checkpoints (skip if absent)",
    "runtime: needs checkpoints and runs inference (slow)",
    "integration: full pipeline with real audio (manual only)",
    "local_integration: test requires local model artifacts or repo-specific runtime assets",
]

[tool.ruff]
target-version = "py313"
exclude = [".references", ".venv"]
